Update traceability matrix

--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -95,11 +95,11 @@ Operating systemen incompatibility was een ander probleem met de oude grafische 
 		\item De library dient makkelijk af te sluiten te zijn.
 	\end{enumerate}
 	\item \label{req:coverage} De library dient getest te zijn met 70\% code coverage (exclusief frameworks).
-\setcounter{enumi}{\value{startvalue}}
+	\setcounter{startvalue}{\value{enumi}}
 \end{enumerate}
 
 \paragraph{Gebruiksvriendelijke API}
-In eerste instantie zullen studenten van het vak Functioneel Programmeren gebruik maken van de library. Omdat studenten bij het vak voor het eerst in aanraking komen met een functionele taal is werken met Monads buiten de scope van het vak gehouden. Bij het programmeren van een Haskell programma dat om kan gaan met reguliere I/O zijn Mondas nodig. Daarom zal Canvas.hs moeten werken met I/O zonder monadische functies aan te bieden via zijn API.
+In eerste instantie gaan studenten van het vak Functioneel Programmeren gebruik maken van de library. Omdat studenten bij het vak voor het eerst in aanraking komen met een functionele taal is werken met Monads buiten de scope van het vak gehouden. Bij het programmeren van een Haskell programma dat om kan gaan met reguliere I/O zijn Mondas nodig. Daarom zal Canvas.hs moeten werken met I/O zonder monadische functies aan te bieden via zijn API.
 
 \begin{enumerate}[label={R\arabic*}]
 \setcounter{enumi}{\value{startvalue}}
