--- a/Hoofdstukken/resultaten/testresultaten.tex
+++ b/Hoofdstukken/resultaten/testresultaten.tex
@@ -98,6 +98,8 @@ Er zijn non-functionele requirements opgesteld in \autoref{hoofdstuk:requirement
 		\item \label{test:blackbox:prompt} tekstinvoer met een popup
 		\item \label{test:blackbox:lokalebestanden} verwerken van lokale bestanden
 		\item \label{test:blackbox:animatie} animaties
+		\item \label{test:blackbox:browser} automatisch starten van een browser
+		\item \label{test:blackbox:automatischherstartenserver} browseromgeving word opnieuw opgestart
 		\item \label{test:blackbox:download} download naar de client
 		\item \label{test:blackbox:upload} upload vanaf de client
 		\item \label{test:blackbox:error} foutmeldingen
