De Hazzzzkell fix

--- a/Hoofdstukken/appendices/2_uitbreiden/events.tex
+++ b/Hoofdstukken/appendices/2_uitbreiden/events.tex
@@ -46,7 +46,7 @@ Vervolgens zal de functie \inlinecode{sendWindowResizeEvent(width,height)} aange
 Na het toevoegen van deze stukken code is het \inlinecode{WindowResize} toegevoegd aan het protocol volgens het vooraf gedefinieerde protocol.
 
 \subsection{Haskell}
-Een uitbreiding op het protocol zal ook aan \todo{De haskell ook anders beschrijven}de Haskell-kant correct geïnterpreteerd en afgehandeld moeten worden. Eerst dient de API uitgebreid te worden met een nieuw data type. Dit zal gedaan moeten worden in de file \emph{Data.hs}.
+Een uitbreiding op het protocol zal ook aan in de module correct geïnterpreteerd en afgehandeld moeten worden. Eerst dient de API uitgebreid te worden met een nieuw data type. Dit zal gedaan moeten worden in de file \emph{Data.hs}.
 \begin{lstlisting}[language=Haskell]
 -- | The events the user can expect to get as input
 data Event
