--- a/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
@@ -3,7 +3,7 @@
 Om een Canvas.hs applicatie te schrijven moeten we een handlerfunctie schrijven die events opvangt. Een handlerfunctie heeft als type \inlinecode{handler :: a -> Event -> (a, Output)}. De \inlinecode{a}'s in dit signatuur zijn \inlinecode{State}'s. Elke keer dat de library een event binnenkrijgt zal onze handlerfunctie aangeroepen worden met de state. Zoals de typesignatuur laat zien, zijn we verplicht deze state terug te geven zodat Canvas.hs hem op kan slaan.
 
 \subsection{Termen}
-Binnen deze handleiding zullen we een aantal termen gebruiken.
+Binnen deze handleiding zullen een aantal termen gebruikt worden, deze worden hieronder gedefinieerd.
 \begin{itemize}
 	\item Output
 De programmeur is verandwoorderlijk voor het produceren van output, meestal zal de programmeur een Shape en een lijst van Actions geven maar ook een BlockingAction is mogelijk.
@@ -21,7 +21,7 @@ Er zijn bepaalde acties die de uitvoer van het programma blokkeren, zoals het la
 Sommige elementen in de grafische boom bevatten veel mogelijkheden, zo kan tekst een ander font hebben, een andere grootte, schuin staan, dik zijn, etc. Daarom zijn er defaults gemaakt, dit is een functie die een aantal standaardwaarden teruggeeft. Voor tekst is dit bijvoorbeeld Arial, 12 pixels groot, niet bold of schuin en links uitgelijnd.
 \end{itemize}
 
-\subsection{Canvas.Hs 101}
+\subsection{Canvas.hs 101}
 Om te beginnen introduceren we hier eerst een voorbeeld van een programma dat een rondje tekent. Zoals hierboven uitgelegd moet eerst een handler gedefinieerd worden. Deze zal zijn state samen met een output moeten teruggeven.
 
 \lstinputlisting[style=densecode]{Examples/CanvasHs101.hs}
