--- a/titlepage.tex
+++ b/titlepage.tex
@@ -19,6 +19,7 @@
 
 \HRule \\[0.6cm]
 { \huge \bfseries Canvas.hs}\\[0.4cm] % Title of your document
+{ \large \bfseries Event driven I/O voor Haskell met het HTML canvas}\\[0.4cm] % Title of your document
 \HRule \\[1.8cm]
  
 %----------------------------------------------------------------------------------------
