Requirements en testresultaten geupdate

--- a/Hoofdstukken/appendices/traceability_matrix.tex
+++ b/Hoofdstukken/appendices/traceability_matrix.tex
@@ -5,7 +5,7 @@
 
 \begin{figure}[H]
 \begin{center}
-\resizebox{\linewidth}{!}{\input{./Hoofdstukken/resultaten/tests/traceability_matrix.tex}}
+\resizebox*{\textheight}{!}{\resizebox{\linewidth}{!}{\input{./Hoofdstukken/resultaten/tests/traceability_matrix.tex}}}
 \caption{Traceability matrix}
 \label{fig:traceability}
 \end{center}
