--- a/Hoofdstukken/resultaten/tests/traceability_matrix.tex
+++ b/Hoofdstukken/resultaten/tests/traceability_matrix.tex
@@ -27,7 +27,7 @@
 \ref{req:multiplatform} &
 \ref{req:performance} &
 \ref{req:coverage} &
-\ref{req:mondadisch} &
+\ref{req:monadisch} &
 \ref{req:maintenance}  \\ \cline{1-30}
 \multicolumn{1}{|c|}{\multirow{4}{*}{Tests}} & \ref{test:js:convert:rgbajson:rgba} 		&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   		 \\ \cline{2-30}
 \multicolumn{1}{|c|}{} & \ref{test:js:execute:actions:displayfixed}						&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   		 \\ \cline{2-30}
@@ -67,4 +67,6 @@
 \multicolumn{1}{|c|}{} & \ref{test:blackbox:multiplatform} 								&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   		 \\ \cline{2-30}
 \multicolumn{1}{|c|}{} & \ref{test:blackbox:browser} 									&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   		 \\ \cline{2-30}
 \multicolumn{1}{|c|}{} & \ref{test:blackbox:coverage} 									&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &     	 	 \\ \cline{2-30}
+\multicolumn{1}{|c|}{} & \ref{test:opzet:monadisch} 									&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   		 \\ \cline{2-30}
+\multicolumn{1}{|c|}{} & \ref{test:opzet:modulair} 									    &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X   	 	 \\ \cline{1-30}
 \end{tabular}
